--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
+    "version": 2,
     "builds": [
         {
-            "src": "package.json",
+            "src": "index.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/public/$1"
+            "dest": "index.js"
         }
-    ],
-    "outputDirectory": "public"
+    ]
 }
